// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`webpack-tests > 1. extracts to a div for simple views, flat transforms 1`] = `
<span
  className="t_dark _dsp_contents "
>
  <span
    className=" t_dark _dsp_contents is_Theme"
    style={
      {
        "color": "var(--color)",
      }
    }
  >
    <div
      className="  _ai-stretch _dsp-flex _fd-column _bxs-border-box _pos-relative _mih-0px _miw-0px  _transform-0hover-scale21281 _fg-1 _fs-1 _fb-auto _btlr-100px _btrr-100px _bbrr-100px _bblr-100px _bg-red _bxsh-1670244214  test1"
    >
      <span
        className="  _col-675002279 _dsp-inline _bxs-border-box _ww-break-word _mt-0px _mr-0px _mb-0px _ml-0px "
      >
        hello world
      </span>
    </div>
  </span>
</span>
`;

exports[`webpack-tests > 2. extracts className for complex views but keeps other props 1`] = `
<span
  className="t_dark _dsp_contents "
>
  <span
    className=" t_dark _dsp_contents is_Theme"
    style={
      {
        "color": "var(--color)",
      }
    }
  >
    <div
      className="  _ai-stretch _dsp-flex _fd-row _fb-auto _bxs-border-box _pos-relative _mih-0px _miw-0px _fs-0  _ox-hidden _oy-hidden  who"
      onClick={[Function]}
    />
    <div
      className="_ai-stretch _dsp-flex _fd-row _fb-auto _bxs-border-box _pos-relative _mih-0px _miw-0px _fs-0 _pt-2px _pb-2px _t-0px ease-in-out-top _t--14px _bg-fff35 "
    >
      <span
        className="  _col-675002279 _dsp-inline _bxs-border-box _ww-break-word _mt-0px _mr-0px _mb-0px _ml-0px "
      >
        hello world
      </span>
    </div>
  </span>
</span>
`;

exports[`webpack-tests > 2. extracts className for complex views but keeps other props 2`] = `
<span
  className="t_dark _dsp_contents "
>
  <span
    className=" t_dark _dsp_contents is_Theme"
    style={
      {
        "color": "var(--color)",
      }
    }
  >
    <div
      className="  _ai-stretch _dsp-flex _fd-row _fb-auto _bxs-border-box _pos-relative _mih-0px _miw-0px _fs-0  _ox-hidden _oy-hidden  who"
      onClick={[Function]}
    />
    <div
      className="_ai-stretch _dsp-flex _fd-row _fb-auto _bxs-border-box _pos-relative _mih-0px _miw-0px _fs-0 _bg-00035 _pt-2px _pb-2px _t-0px ease-in-out-top "
    >
      <span
        className="  _col-675002279 _dsp-inline _bxs-border-box _ww-break-word _mt-0px _mr-0px _mb-0px _ml-0px "
      >
        hello world
      </span>
    </div>
  </span>
</span>
`;
